Generate SSA information for scripts containing switch and try blocks, bug 704387. r=dvander