js/src/jsanalyze.h
@@ -1092,8 +1092,8 @@ class ScriptAnalysis
     /*
      * Whether we distinguish different writes of this variable while doing
      * SSA analysis. Escaping locals can be written in other scripts, and the
-     * presence of NAME opcodes, switch or try blocks keeps us from tracking
-     * variable values at each point.
+     * presence of NAME opcodes which could alias local variables or arguments
+     * keeps us from tracking variable values at each point.
      */
     bool trackSlot(uint32_t slot) { return !slotEscapes(slot) && canTrackVars; }
 
@@ -1153,9 +1153,15 @@ class ScriptAnalysis
                            Vector<SlotValue> *pending);
     void checkBranchTarget(JSContext *cx, uint32_t targetOffset, Vector<uint32_t> &branchTargets,
                            SSAValue *values, uint32_t stackDepth);
+    void checkExceptionTarget(JSContext *cx, uint32_t catchOffset,
+                              Vector<uint32_t> &exceptionTargets);
     void mergeBranchTarget(JSContext *cx, const SSAValue &value, uint32_t slot,
                            const Vector<uint32_t> &branchTargets);
-    void removeBranchTarget(Vector<uint32_t> &branchTargets, uint32_t offset);
+    void mergeExceptionTarget(JSContext *cx, const SSAValue &value, uint32_t slot,
+                              const Vector<uint32_t> &exceptionTargets);
+    bool removeBranchTarget(Vector<uint32_t> &branchTargets,
+                            Vector<uint32_t> &exceptionTargets,
+                            uint32_t offset);
     void freezeNewValues(JSContext *cx, uint32_t offset);
 
     struct TypeInferenceState {
